Ajout des cartes et création des classes

--- a/views/index/index.html
+++ b/views/index/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planning Poker</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -33,17 +34,6 @@
         <p>&copy; 2024 Planning Poker. Tous droits réservés.</p>
         <a href="#legal">Mentions légales</a>
     </footer>
-
-    <script>
-        // Gestion des boutons
-        document.getElementById("create-game-btn").addEventListener("click", function () {
-            window.location.href = "create-game.html";
-        });
-
-        document.getElementById("load-game-btn").addEventListener("click", function () {
-            window.location.href = "load-game.html";
-        });
-    </script>
 </body>
 
 </html>
