--- a/views/game/game.html
+++ b/views/game/game.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planning Poker - Cartes</title>
+    <script type="module" src="game.js" defer></script>
     <link rel="stylesheet" href="../styles.css"> 
 </head>
 
