create game et debut add user

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planning Poker</title>
-    <script src="index.js" defer></script>
-    <link rel="stylesheet" href="../styles.css">
+    <script src="./index/index.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -24,8 +24,10 @@
             <p>Choisissez une option :</p>
 
             <div class="options">
-                <button id="create-game-btn">Créer une nouvelle partie</button>
-                <button id="load-game-btn">Charger une partie existante</button>
+                <a href="./create-game/create-game.html"><button id="create-game-btn">Créer une nouvelle
+                        partie</button></a>
+                <a href="./load-game/load-game.html"><button id="load-game-btn">Charger une partie
+                        existante</button></a>
             </div>
         </section>
     </main>
