--- a/views/game/game.html
+++ b/views/game/game.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planning Poker - Cartes</title>
     <script type="module" src="game.js" defer></script>
-    <link rel="stylesheet" href="../styles.css"> 
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="./game.css">
 </head>
 
 <body>
@@ -14,47 +15,46 @@
         <h1>Planning Poker - Sélectionnez votre carte</h1>
     </header>
     <main>
-        <section>
-            <div class="cards-container">
-                <!-- Cartes : Ajoutez le contenu ici -->
-                <div class="card" data-value="0">
-                    <img src="../../cartes/cartes_0.svg" alt="Carte 0">
-                </div>
-                <div class="card" data-value="1">
-                    <img src="../../cartes/cartes_1.svg" alt="Carte 1">
-                </div>
-                <div class="card" data-value="2">
-                    <img src="../../cartes/cartes_2.svg" alt="Carte 2">
-                </div>
-                <div class="card" data-value="3">
-                    <img src="../../cartes/cartes_3.svg" alt="Carte 3">
-                </div>
-                <div class="card" data-value="5">
-                    <img src="../../cartes/cartes_5.svg" alt="Carte 5">
-                </div>
-                <div class="card" data-value="8">
-                    <img src="../../cartes/cartes_8.svg" alt="Carte 8">
-                </div>
-                <div class="card" data-value="13">
-                    <img src="../../cartes/cartes_13.svg" alt="Carte 13">
-                </div>
-                <div class="card" data-value="20">
-                    <img src="../../cartes/cartes_20.svg" alt="Carte 20">
-                </div>
-                <div class="card" data-value="40">
-                    <img src="../../cartes/cartes_40.svg" alt="Carte 40">
-                </div>
-                <div class="card" data-value="100">
-                    <img src="../../cartes/cartes_100.svg" alt="Carte 100">
-                </div>
-                <div class="card" data-value="cafe">
-                    <img src="../../cartes/cartes_cafe.svg" alt="Carte Café">
-                </div>
-                <div class="card" data-value="interro">
-                    <img src="../../cartes/cartes_interro.svg" alt="Carte Interro">
-                </div>
+        <h2 id="user-title">Vote de l'utilisateur : </h2>
+        <div class="cards-container">
+            <!-- Cartes : Ajoutez le contenu ici -->
+            <div class="card" data-value="0">
+                <img src="../../cartes/cartes_0.svg" alt="Carte 0">
             </div>
-        </section>
+            <div class="card" data-value="1">
+                <img src="../../cartes/cartes_1.svg" alt="Carte 1">
+            </div>
+            <div class="card" data-value="2">
+                <img src="../../cartes/cartes_2.svg" alt="Carte 2">
+            </div>
+            <div class="card" data-value="3">
+                <img src="../../cartes/cartes_3.svg" alt="Carte 3">
+            </div>
+            <div class="card" data-value="5">
+                <img src="../../cartes/cartes_5.svg" alt="Carte 5">
+            </div>
+            <div class="card" data-value="8">
+                <img src="../../cartes/cartes_8.svg" alt="Carte 8">
+            </div>
+            <div class="card" data-value="13">
+                <img src="../../cartes/cartes_13.svg" alt="Carte 13">
+            </div>
+            <div class="card" data-value="20">
+                <img src="../../cartes/cartes_20.svg" alt="Carte 20">
+            </div>
+            <div class="card" data-value="40">
+                <img src="../../cartes/cartes_40.svg" alt="Carte 40">
+            </div>
+            <div class="card" data-value="100">
+                <img src="../../cartes/cartes_100.svg" alt="Carte 100">
+            </div>
+            <div class="card" data-value="cafe">
+                <img src="../../cartes/cartes_cafe.svg" alt="Carte Café">
+            </div>
+            <div class="card" data-value="interro">
+                <img src="../../cartes/cartes_interro.svg" alt="Carte Interro">
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Planning Poker. Tous droits réservés.</p>
