--- a/views/add-user/add-user.html
+++ b/views/add-user/add-user.html
@@ -14,7 +14,7 @@
         <h1>Créer une nouvelle partie</h1>
     </header>
     <main>
-        <form id="create-game-form" action="../backlog/backlog.html">
+        <form id="add-user-form" action="../backlog/backlog.html">
             <label for="player-count">Nombre de joueurs (max : 20) :</label>
             <input type="number" id="player-count" name="player-count" min="1" max="20" value="1" required>
             <div id="player-names"></div>
