--- a/views/styles.css
+++ b/views/styles.css
@@ -7,6 +7,27 @@ body {
     min-height: 100vh;
 }
 
+.row-flex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.split-view {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 1rem;
+    justify-items: center;
+}
+
+div.left-aside {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+}
+
 header {
     background-color: #4CAF50;
     color: white;
@@ -47,6 +68,15 @@ button {
     cursor: pointer;
 }
 
+button.disabled {
+    background-color: #cccccc;
+    cursor: default;
+}
+
+button.disabled:hover {
+    background-color: #cccccc;
+}
+
 button:hover {
     background-color: #45a049;
 }
@@ -55,37 +85,4 @@ footer {
     background-color: #f1f1f1;
     text-align: center;
     padding: 1rem;
-}
-
-.cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    justify-content: center;
-    max-width: 100%;
-    overflow-x: auto;  /* Permet de faire défiler horizontalement si nécessaire */
-}
-
-.card {
-    width: 100px;
-    height: 140px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.card img {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 8px;
-    border: 2px solid #4CAF50;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-}
-
-.card img:hover {
-    transform: scale(1.1);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
