Ajout de l'objet pour rates

--- a/views/game-resume/game-resume.html
+++ b/views/game-resume/game-resume.html
@@ -20,7 +20,7 @@
             </aside>
             <div id="backlog-data">
                 <h3></h3>
-                <p></p>
+                <p><span class="bold">Description : </span></p>
                 <button id="backlog-vote"></button>
             </div>
         </div>
