--- a/views/game-resume/game-resume.html
+++ b/views/game-resume/game-resume.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="resume-title">Resume de la game : </h1>
+    <header class="nav-bar">
+        <a href="../index.html" class="menu">Accueil</a>
+        <a href="../game-resume/game-resume.html" class="menu">Résumé de la partie en cours</a>
     </header>
     <main>
+        <h1 id="resume-title">Resume de la partie : </h1>
         <div class="left-aside">
             <aside id="backlogs-container">
             </aside>
@@ -22,6 +24,7 @@
                 <h3></h3>
                 <p><span class="bold">Description : </span></p>
                 <button id="backlog-vote"></button>
+                <p id="final-note"></p>
             </div>
         </div>
     </main>
