--- a/views/add-user/add-user.html
+++ b/views/add-user/add-user.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créer une partie</title>
     <script type="module" src="add-user.js" defer></script>
+    <script type="module" src="../nav-bar.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Créer une nouvelle partie</h1>
+    <header class="nav-bar">
+        <a id="accueil-game-link" href="../index.html" class="menu">Accueil</a>
+        <a id="resume-game-link" href="../game-resume/game-resume.html" class="menu">Résumé de la partie en cours</a>
     </header>
     <main>
+        <h1>Créer une nouvelle partie</h1>
         <form id="add-user-form" action="../backlog/backlog.html">
             <label for="player-count">Nombre de joueurs (max : 20) :</label>
             <input type="number" id="player-count" name="player-count" min="1" max="20" value="1" required>
