--- a/views/create-game/create-game.html
+++ b/views/create-game/create-game.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créer une partie</title>
     <script type="module" src="./create-game.js" defer></script>
+    <script type="module" src="../nav-bar.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Créer une nouvelle partie</h1>
+    <header class="nav-bar">
+        <a href="../index.html" class="menu">Accueil</a>
+        <a id="resume-game-link" href="../game-resume/game-resume.html" class="menu">Résumé de la partie en cours</a>
     </header>
     <main>
+        <h1>Créer une nouvelle partie</h1>
         <form id="create-game-form" method="post" action="../add-user/add-user.html">
             <label for="game-name">Nom de la partie :</label>
             <input type="text" id="game-name" name="game-name" required>
