--- a/views/styles.css
+++ b/views/styles.css
@@ -40,7 +40,8 @@ main {
     padding: 1rem;
 }
 
-form {
+form,
+div.center {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -90,4 +91,42 @@ footer {
 p.bold,
 span.bold {
     font-weight: bold;
+}
+
+.no-margin {
+    margin: 0;
+}
+
+div.centered-modal {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.255);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.centered-modal.hidden {
+    display: none;
+}
+
+div.modal-content>div.modal-cross {
+    margin: 2px;
+    padding: 3px;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: white;
+    font-weight: bold;
+}
+
+div.centered-modal>div.modal-content {
+    position: relative;
+    background-color: white;
+    padding: 2rem 3rem;
 }
