--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,10 @@
                 <a href="./load-game/load-game.html"><button id="load-game-btn">Charger une partie
                         existante</button></a>
             </div>
+            <div id="export-json">
+                <p>Vous pouvez également exporter la partie en cours : </p>
+                <a id="export-game-btn"><button>Exporter en JSON</button></a>
+            </div>
         </section>
         <div class="centered-modal hidden" id="create-choice">
             <div class="modal-content">
