--- a/views/load-game/load-game.html
+++ b/views/load-game/load-game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recharger une partie</title>
-    <script src="load-game.js" defer></script>
+    <script type="module" src="load-game.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
